hphp/hack/test/typecheck/let/let_while.php.exp
File "let_while.php", line 8, characters 8-8:
Unbound name: y (a global constant) (Naming[2049])
